--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 								<b class="is-visible">Freelancer</b>
 								<b>Digital Marketer</b>
 								<b>Blogger</b>
-								<b>Brand Developer</b>
+								<b>Developer</b>
 							</span>
 						</p>
 					</div>
@@ -120,7 +120,7 @@
 					<div class="social">
             			<ul>
                 			<li><a href="https://fb.com/praveenkumar.end"><i class="fab fa-facebook-f"></i></a></li>
-                			<li><a href="https://twitter.com/praveenkumar.rv"><i class="fab fa-twitter"></i></a></li>
+                			<li><a href="https://twitter.com/praveenkumar_rv"><i class="fab fa-twitter"></i></a></li>
                 			<li><a href="https://instagram.com/praveenkumar.rv"><i class="fab fa-instagram"></i></a></li>
 							
             			</ul>
