--- a/index.html
+++ b/index.html
@@ -71,12 +71,6 @@
 					<li data-tooltip="resume" data-position="top">
             			<a href="#resume" class="icon-r fas fa-address-book"></a>
 					</li>
-					<li data-tooltip="portfolio" data-position="top">
-            			<a href="#portfolio" class="icon-p fas fa-briefcase"></a>
-					</li>
-					<li data-tooltip="blog" data-position="top">
-            			<a href="#blog" class="icon-b fas fa-receipt"></a>
-					</li>
 					<li data-tooltip="contact" data-position="bottom">
 						<a href="#contact" class="icon-c fas fa-envelope"></a>
 					</li>
@@ -739,7 +733,7 @@
 						<div class="row">
 							<div class="col-lg-4 col-sm-12 info">
 								<i class="fas fa-paper-plane"></i>
-         						<p>hello@praveenkumar.best</p>
+         						<p>praveenkumar.rv@outlook.comt</p>
           						<span>Email</span>
 							</div>
 							<div class="col-lg-4 col-sm-12 info">
@@ -749,7 +743,7 @@
 							</div>	
 							<div class="col-lg-4 col-sm-12 info">
 								<i class="fas fa-phone"></i>
-         						<p>(+91) 9080477265</p>
+         						<p> [@praveenkumar-rv](https://t.me/praveenkumar-rv) </p>
           						<span>Phone</span>
 							</div>	
 						</div>
