--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
 						<div class="row">
 							<div class="col-lg-4 col-sm-12 info">
 								<i class="fas fa-paper-plane"></i>
-         						<p>praveenkumar.rv@outlook.comt</p>
+         						<p>praveenkumar.rv@outlook.com</p>
           						<span>Email</span>
 							</div>
 							<div class="col-lg-4 col-sm-12 info">
@@ -743,8 +743,8 @@
 							</div>	
 							<div class="col-lg-4 col-sm-12 info">
 								<i class="fas fa-phone"></i>
-         						<p> [@praveenkumar-rv](https://t.me/praveenkumar-rv) </p>
-          						<span>Phone</span>
+         						<p> <a href="https://t.me/praveenkumar-rv">@PraveenKumar-Rv</a>v </p>
+          						<span>Telegram</span>
 							</div>	
 						</div>
 					</div>
