--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
 							</div>	
 							<div class="col-lg-4 col-sm-12 info">
 								<i class="fas fa-phone"></i>
-         						<p> <a href="https://t.me/praveenkumar-rv">@PraveenKumar-Rv</a>v </p>
+         						<p> <a href="https://t.me/praveenkumar-rv">@PraveenKumar-Rv</a> </p>
           						<span>Telegram</span>
 							</div>	
 						</div>
