--- a/guides/optimize-miui.html
+++ b/guides/optimize-miui.html
@@ -35,7 +35,7 @@
 
  • After booting the device, don't login with mi account.<br/>
 
- • Callibrate you battery : Guide<br/>
+ • Callibrate you battery : <a href="https://praveenkumar-rv.github.io/guides/battery-calibration">Guide</a><br/>
 
 
 </div>
