--- a/guides/custom-recovery.html
+++ b/guides/custom-recovery.html
@@ -16,6 +16,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Flash Custom Recovery / Root</h2>
+ ..................................................................<br/>
 								<p>Download & extract Platform tools (in pc)</p>
 								<p>Reboot to fastboot mode</p>
 								<p>Connect to pc</p>
@@ -29,7 +30,7 @@
                                                                 <i>*Replace 'recovery.img' with the file name*</i><br/>
 								<br/>
 								<p>Viola! Flashed twrp successfully</p>
-								<p>Now flash magisk if needed (*for root*)</p>
+								<p>Now flash magisk if needed (<i>*for root*</i>)</p>
 						</div>
 					</section>
 
@@ -38,17 +39,14 @@
 							<h2>Downloads</h2>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
-									<span class="icon style2 major fa-gem"></span>
 									<h3>Platform Tools</h3>
 									<a href="https://drive.google.com/file/d/1kJqKbeM4jtW5S64lrJPUG622tHuOmKzP/view?usp=sharing" class="button">Download</a>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-save"></span>
 									<h3>Custom Recovery</h3>
 									<a href="https://drive.google.com/file/d/1Vl76NL47A8S_c2f6akDB0UZopfrIPKWy/view?usp=sharing" class="button">Download</a>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-chart-bar"></span>
 									<h3>Magisk</h3>
 									<a href="https://drive.google.com/file/d/1xirS0O9rtGlguGUyadVTCDdTx3w83JpB/view?usp=sharing" class="button">Download</a>
 								</section>
