--- a/guides/flash-recovery.html
+++ b/guides/flash-recovery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Flah custom recovery | Root</title>
+		<title>Flah Recovery | Root</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,12 +15,12 @@
 
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Flash Custom Recovery / Root</h2>
+							<h2>Flash Recovery | Root</h2>
  ..................................................................<br/>
 								<p>Download & extract Platform tools (in pc)</p>
 								<p>Reboot to fastboot mode</p>
 								<p>Connect to pc</p>
-								<p>Copy twrp.img to platform tools folder</p>
+								<p>Copy recovery.img to platform tools folder</p>
 								<p>Location bar > type cmd & enter</p>
 								<p>Type the following commands in CMD prompt</p>
 
@@ -29,7 +29,7 @@
 								<b>Command</b> - <i>fastboot boot revovery.img</i><br/>
                                                                 <i>*Replace 'recovery.img' with the file name*</i><br/>
 								<br/>
-								<p>Viola! Flashed twrp successfully</p>
+								<p>Viola! Flashed successfully</p>
 								<p>Now flash magisk if needed (<i>*for root*</i>)</p>
 						</div>
 					</section>
@@ -43,7 +43,7 @@
 									<a href="https://drive.google.com/file/d/1kJqKbeM4jtW5S64lrJPUG622tHuOmKzP/view?usp=sharing" class="button">Download</a>
 								</section>
 								<section>
-									<h3>Custom Recovery</h3>
+									<h3>Custom Recoveries</h3>
 									<a href="https://drive.google.com/file/d/1Vl76NL47A8S_c2f6akDB0UZopfrIPKWy/view?usp=sharing" class="button">Download</a>
 								</section>
 								<section>
