--- a/guides/unlockbootloader.html
+++ b/guides/unlockbootloader.html
@@ -69,7 +69,7 @@
 						</div>
 					</section>
 
-					<footer class="wrapper style1 align-center">
+					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
@@ -78,7 +78,7 @@
 								</section>
 							</div>
 						</div>
-					</footer>
+					</section>
 			</div>
 
 			<script src="assets/js/jquery.min.js"></script>
