--- a/guides/unlockbootloader.html
+++ b/guides/unlockbootloader.html
@@ -69,11 +69,9 @@
 <h2>Contact</h2>
                                                         <div class="items style1 medium onscroll-fade-in">
 								<section>
-								
-									<a href="https://t.me/nubcat" class="button">Telegram</a>
-								</section>
-							
-							</div>
+									<a href="https://t.me/NubCat" class="button">Telegram</a>
+								</section>		
+				          		</div>
 						</div>
 					</section>
 
